Complete sensor tag flow